pantallas de receta y registro de medicos

--- a/node/views/Registro_1.ejs
+++ b/node/views/Registro_1.ejs
@@ -241,8 +241,8 @@ body.custom-background { background-color: #ffffff; }
 		<div class="coblocks-form" id="b1684b643f6dfb31b6d060515730b184e91c32a4">
 
 			
-			<form action="http://www.mexicad.com/doctores/#b1684b643f6dfb31b6d060515730b184e91c32a4" method="post">
-				
+			<!--<form action="http://www.mexicad.com/doctores/#b1684b643f6dfb31b6d060515730b184e91c32a4" method="post">  -->
+			<form action="/registro2" method="post">	
 <label for="nombre-apellidos" class="coblocks-label">Nombre                      /               Apellidos  <span class="required">*</span></label>
 		<input type="hidden" name="field-nombre-apellidos[label]" value="Nombre                      /               Apellidos ">
 
@@ -313,8 +313,8 @@ body.custom-background { background-color: #ffffff; }
 		<div class="coblocks-form" id="7b63cc63bcd54590b294aefc459fdc2fc4524649">
 
 			
-			<form action="http://www.mexicad.com/doctores/#7b63cc63bcd54590b294aefc459fdc2fc4524649" method="post">
-				
+			<!-- <form action="http://www.mexicad.com/doctores/#7b63cc63bcd54590b294aefc459fdc2fc4524649" method="post"> -->
+			<form action="/registro1" method="post">	
 <div class="coblocks-field"><label for="sexo" class="coblocks-label"><br>Sexo <span class="required">*</span></label>
 		<input type="hidden" name="field-sexo[label]" value="&lt;br&gt;Sexo">
 
