--- a/node/views/Registro_2.ejs
+++ b/node/views/Registro_2.ejs
@@ -233,7 +233,7 @@ body.custom-background { background-color: #ffffff; }
 		<div class="coblocks-form" id="401c889b88753da280fa2b8e8d6727f90ccf3e48">
 
 			
-			<form action="http://www.mexicad.com/reg2/#401c889b88753da280fa2b8e8d6727f90ccf3e48" method="post">
+			<form action="/registro2" method="post">
 				
 <div class="coblocks-field"><label for="historial-farmacologico" class="coblocks-label">Historial farmacológico <span class="required">*</span></label>
 		<input type="hidden" name="field-historial-farmacologico[label]" value="Historial farmacológico">
