--- a/node/views/Registro_3.ejs
+++ b/node/views/Registro_3.ejs
@@ -233,7 +233,7 @@ body.custom-background { background-color: #ffffff; }
 		<div class="coblocks-form" id="45b9523780936706530a5f499e42cfae8b34efab">
 
 			
-			<form action="http://www.mexicad.com/reg3/#45b9523780936706530a5f499e42cfae8b34efab" method="post">
+			<form action="/registro3" method="post">
 				
 <div class="coblocks-field"><label for="antecedentes-personales" class="coblocks-label">Antecedentes Personales <span class="required">*</span></label>
 		<input type="hidden" name="field-antecedentes-personales[label]" value="Antecedentes Personales">
